k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rate-limiter

spec:
  replicas: 1

  selector:
    matchLabels:
      app: rate-limiter

  template:
    metadata:
      labels:
        app: rate-limiter

    spec:
      containers:
      - name: rate-limiter

        image: distributed-rate-limiter:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8080
