k8s/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana

spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
      - name: grafana

        image: grafana/grafana:latest

        ports:
        - containerPort: 3000

        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana

      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: grafana

spec:
  selector:
    app: grafana

  ports:
  - port: 3000
    targetPort: 3000

  type: NodePort
