k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rate-limiter
spec:
  selector:
    app: rate-limiter

  ports:
  - port: 8080
    targetPort: 8080

  type: NodePort
