k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rate-limiter-ingress
  labels:
    app.kubernetes.io/name: rate-limiter-ingress
spec:
  rules:
  - host: rate-limiter.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rate-limiter
            port: 
              number: 8080
